# talknoteapp

./: .easignore  .env.example  .expoignore  .gitignore  ANDROID_SETUP.md  App 2.tsx  App.original.tsx  App.tsx  GOOGLE_CLOUD_SETUP.md  GoogleService-Info.plist  README.md  TTS_implementation_plan.md  app 2.json  app.config.js  app.json  docker-compose.yml  eas.json  metro.config.js  mock_stt_server.py  package-lock 2.json  package-lock 3.json  package-lock 4.json  package-lock.json  package.json  postcss.config.js  stt_server.py  switch-env.sh  tailwind.config 2.js  test_websocket_stt.py  todo.mdc  tsconfig.json  types.d 2.ts
backend/: Dockerfile  docker-compose.dev.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  talknote_dev.db
backend/app/: main.py  main_ai.py  main_test.py  test_ai.py
backend/app/core/: auth.py  database.py  dependencies.py  deps.py  middleware.py  settings.py
backend/app/models/: __init__.py  media.py  notebook.py  page.py  tag.py  transcript.py  user.py
backend/app/schemas/: import_schema.py  media.py  notebook.py  ocr.py  page.py  transcript.py
backend/app/services/: base.py  file_processor.py  media.py  notebook.py  ocr.py  page.py  transcript.py  tts_service.py  url_importer.py  user.py
backend/app/utils/: pubsub.py
backend/app/workers/: __init__.py  media_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0b0f6c414d52_initial_schema.py  8a871f530904_add_import_id_to_pages.py
backend/test_uploads/: eb0204e6-26c5-48e3-a6a6-723a3a3cb5d0
backend/tests/: conftest.py
docs/: backend.md  (+22 more)
(+170 files in other folders)
